# flake8-pytestrail

./: .travis.yml  README.md  flake8_pytestrail.py  pyproject.toml  tox.ini
test/: conftest.py  test_tr002.py
test/samples/: tr001.py  tr002.py  tr003.py
tests/: conftest.py  test_tr001.py  test_tr002.py  test_tr003.py
tests/samples/: tr001_1.py  tr001_2.py  tr001_3.py  tr001_4.py  tr002_1.py  tr002_2.py  tr002_3.py  tr003_1.py  tr003_2.py  tr003_3.py  tr003_4.py  tr003_5.py
